                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 13-02-2006 fixed: repeatone was ignored if randomize was enabled on a playlist
 - 13-02-2006 changed: httpapi playfile command to immediately start playback of a playlist.
		it also accepts an extra parameter to force the playlist (note the playlist is CLEARED! before it playback starts).
		if a playlist is not provided, the current playlist is used.
		if there is no current playlist, then 1 is assumed (like the playmedia builtin command)
		xbmcHttp?command=PlayFile&parameter=e:\albums\playlists\music\tekno.m3u;PLAYLIS (where PLAYLIST=0,1,2,3)
 - 13-02-2006 added: new info labels: playlist.length, playlist.position, playlist.random, playlist.repeat
 - 13-02-2006 added: More lcd info labels thanks to Jeff McClain.
 - 13-02-2006 fixed: Windows with conditional visibility and WindowClose animations could flash on screen.
 - 13-02-2006 added: New Add/Edit media source dialogs.
 - 13-02-2006 fixed: Page up/down controls were hard to move off from.
 - 12-02-2006 fixed: when changing the sort between ascending and descending autoplay next item in music will follow
 - 12-02-2006 fixed: WindowOpen animations weren't shown.
 - 12-02-2006 fixed: WindowClose animations sometimes resulted in the window never closing (constantly animating)
 - 12-02-2006 changed: Spincontrols of type text set and get the value rather than the index with GetValue() and SetValue()
 - 12-02-2006 fixed: Controls that were hidden would lose their focus.
 - 12-02-2006 fixed: Video bookmarks window was only shown sporadically.
 - 12-02-2006 fixed: music wouldnt highlight the correct item when switching the sorting between ascending and descending